testsuite/tests/polykinds/T7433.stderr

T7433.hs:2:10: error: [GHC-71015]
    • Data constructor ‘Z’ cannot be used here
        (perhaps you intended to use DataKinds)
    • In the type ‘'Z’
      In the type declaration for ‘T’
