testsuite/tests/polykinds/T7433.hs
{-# LANGUAGE NoDataKinds #-}
data N = Z
type T = 'Z
